タグを付ける対象のコミットを積むところまで作成

--- a/Package.swift.ejs
+++ b/Package.swift.ejs
@@ -13,8 +13,8 @@ let package = Package(
     targets: [
         .binaryTarget(
             name: "ga913kmp",
-            url: "https://github.com/tfandkusu/ga913-kmp/releases/download/0.0.3/ga913kmp.xcframework.zip",
-            checksum: "3d178b067acff553f3c64eefb385eb2b49a7573b23de8bc763644b712660ffe9"
+            url: "https://github.com/tfandkusu/ga913-kmp/releases/download/<%= version %>/ga913kmp.xcframework.zip",
+            checksum: "<%= checksum %>"
         ),
     ]
 )
